# goof_ai

./: .gitignore  docker-compose.yml  example.env
backend/: Dockerfile  entrypoint.sh  main.py  requirements.txt
backend/auth/: router.py  security.py
backend/flyway/: V10__add_frequency_column_to_agents.sql  V11__modify_frequency_column.sql  V12__add_owner_id_to_agents.sql  V13__create_agent_execution_tables.sql  V14__create_agent_execution_logs_table.sql  V15__alter_agent_execution.sql  V16__add_active_to_agents.sql  V17__alter_agent_execution_table.sql  V18__alter_table_agents.sql  V1__create_agent_tool_tables.sql  V2__create_user_table.sql  V3__create_oauth2_token_tables.sql  V4__create_oauth_provider_table.sql  V5__alter_tool_table.sql  V6__alter_tools_rename_command_to_url.sql  V7__insert_goof_gmail_tool.sql  V8__rename_provider_to_provider_id.sql  V9__add_tool_id_to_oauth_tokens.sql
backend/models/: db.py
backend/oauth2/: Oauth2Manger.py  oauth2_providers.py
backend/routes/: agent_execution_routes.py  agent_routes.py  mcp_routes.py  oauth2_routes.py  tool_routes.py
backend/schemas/: agent_execution.py  pydantic.py
backend/service/: agent.py  gemini.py  prompt_service.py
backend/utils/: db.py  scheduler.py
frontend/: Dockerfile  angular.json  nginx.conf  package-lock.json  package.json  proxy.conf.json
frontend/src/: styles.scss
frontend/src/app/: app.component.ts  app.config.ts  app.css  app.html  app.routes.ts  app.ts  b&wtheme.ts  theme.ts
mcp-servers/goof-gmail-mcp-server-http/: Dockerfile  example.env  main.py  pyproject.toml  service.py
(+42 files in other folders)
