[project]
name = "goof-gmail-mcp-server-http"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp==2.13.1",
    "mcp>=1.4.1",
    "google-api-python-client>=2.127.0",
    "google-auth>=2.34.0",
    "google-auth-oauthlib>=1.2.0", 
    "google-auth-httplib2>=0.2.0", 
    "python-dateutil>=2.8.2"
]
